src/css/App.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

*, *::before, *::after {
  box-sizing: border-box;
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
  background: #1f1f1f;
  color: #f6f6f6;
  font-family: sans-serif;
	line-height: 1.5;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*
  set height
*/
body > #root {
  height: 100vh;
	width: 100vw;
	display: grid;
	place-content: center;
}

/*
  custom styles
*/

.container {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 45vw;
	height: 90vh;
}

.home-container {
	text-align: center;
}

.home-heading {
	font-size: 3rem;
	font-weight: 700;
	margin-bottom: 1rem;
}

.home-body {
	margin-bottom: 2rem;
}

.app-header {
	font-size: 4rem;
	padding-bottom: 6rem;
}

.accent {
	color: #4285f4;
}

.app-body {
	text-align: center;
	flex: 1;
	width: 100%;
}

.query-form-container {
	margin-bottom: 2rem;
}

.search-wrapper {
	position: relative;
	width: calc(max(66%, 18rem));
	margin: 0 auto;
}

.search-icon-btn {
	position: absolute;
	right: .5rem;
	top: 50%;
	transform: translateY(-50%);
	width: 2.5rem;
	height: 2.5rem;
	background-color: transparent;
	color: #4285f4;
	cursor: pointer;
	z-index: 1;
}

.video-window {
  height: 0;
	position: relative;
	/* 16:9 */
	padding-bottom: 56.25%;
	height: 0;
}

.video-window iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.search-label {
	border-radius: 100px;
	background-color: #e2e2e2;
	color: #1f1f1f;
	font-size: 1rem;
	position: relative;
	display: block;
	width: 100%;
	margin: .5rem auto;
	padding: .75rem 3rem 0.75rem 1.5rem;
}

.action-btn {
	background-color: #e47711;
	border-radius: 100px;
	cursor: pointer;
	padding: .5rem 1rem;
}

.video-option-btn {
	border-radius: 100px;
	margin-bottom: 1rem;
	padding: .5rem 1rem;
	width: 100%;
}

.video-option-btn:hover, .video-option-btn:focus {
	background: #cccccc;
	cursor: pointer;
}

.control-btn {
	background: none;
	border: 1px solid #cccccc;
	border-radius: 100px;
	color: #cccccc;
	cursor: pointer;
	display: block;
	padding: .5rem 1rem;
}

.btn-row {
	display: flex;
	justify-content: center;
	gap: 1rem;
	margin-top: 1rem;
}

.loop-control-btn {
	background: none;
	border: 1px solid #e47711;
	border-radius: 100px;
	color: #e47711;
	cursor: pointer;
	display: block;
	padding: .5rem 1rem;
}

.recorder-panel {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 1rem;
}

.record-icon {
	cursor: pointer;
}

.audio-btn {
	margin: 1rem auto 0 auto;
}

